config/gamer-module-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gamer-module-virtualservice
spec:
  hosts:
  - your-domain-name.com  # Replace this with your actual domain or host name
  gateways:
  - gamer-module-gateway
  http:
  - route:
    - destination:
        host: gamer-module-service
        port:
          number: 3004
