config/gaming-vendor-module-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gaming-vendor-module-virtualservice
spec:
  hosts:
  - your-domain-name.com  # Replace this with your actual domain or host name
  gateways:
  - gaming-vendor-module-gateway
  http:
  - route:
    - destination:
        host: gaming-vendor-module-service
        port:
          number: 3001
