config/general-module-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: general-module-virtualservice
spec:
  hosts:
  - your-domain-name.com  # Replace this with your actual domain or host name
  gateways:
  - general-module-gateway
  http:
  - route:
    - destination:
        host: general-module-service
        port:
          number: 3002
